build : backend/Dockerfile에서 gradle 의존성 디렉터리에 캐싱 적용

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,4 +1,8 @@
 FROM jenkins/jenkins
 
 USER root
-RUN apt-get update && apt-get install -y docker-compose
+
+# https://docs.docker.com/compose/install/#install-compose-on-linux-systems
+RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+RUN chmod +x /usr/local/bin/docker-compose
+RUN ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
