--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -11,4 +11,5 @@ services:
     volumes:
       - ./jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/bin/docker:/usr/bin/docker
 
