--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,15 +71,16 @@ services:
       - "443:443"
       - "3333:3333"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/default.conf.template:/etc/nginx/conf.d/default.conf.template:ro
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+    env_file: prod.env
     depends_on:
       - backend
       - certbot
     networks:
       - internal_network
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    command: /bin/sh -c "while :; do sleep 6h & wait $${!}; nginx -s reload; done & envsubst '$${APP_DOMAIN}' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g \"daemon off;\""
 
   certbot:
     container_name: certbot
