--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ./mysql/mysql-data:/var/lib/mysql
       - ./mysql/initdb.d/:/docker-entrypoint-initdb.d/
-    env_file: prod.env
+    env_file: .env
     environment:
       MYSQL_DATABASE: mafia
       TZ: "Asia/Seoul"
@@ -33,7 +33,7 @@ services:
     image: openvidu/openvidu-server-kms:2.19.0
     container_name: openvidu
     restart: always
-    env_file: prod.env
+    env_file: .env
     networks:
       - internal_network
 
@@ -45,7 +45,7 @@ services:
       target: prod
     volumes:
       - ./log:/log
-    env_file: prod.env
+    env_file: .env
     environment:
       TZ: "Asia/Seoul"
       SPRING_PROFILES_ACTIVE: "prod"
@@ -71,15 +71,16 @@ services:
       - "443:443"
       - "3333:3333"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/default.conf.template:/etc/nginx/conf.d/default.conf.template:ro
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+    env_file: .env
     depends_on:
       - backend
       - certbot
     networks:
       - internal_network
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    command: /bin/sh -c "while :; do sleep 6h & wait $${!}; nginx -s reload; done & envsubst '$${APP_DOMAIN}' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g \"daemon off;\""
 
   certbot:
     container_name: certbot
