--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -17,93 +17,116 @@ on:
       - master
 
 env:
-  # Use docker.io for Docker Hub if empty
-  REGISTRY: repo.treescale.com
-
+  ROOT_DIR: ~/camfia
+  BACKEND_IMAGE: "${{ secrets.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/backend"
+  NGINX_IMAGE: "${{ secrets.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/nginx"
+  GIT_BRANCH: ${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
 
 jobs:
-  build:
+  build-images:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set environment variables
-        run: |
-          # Short name for current branch. For PRs, use target branch (base ref)
-          GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
-          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
-          echo "BACKEND_IMAGE=${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/backend" >> $GITHUB_ENV
-          echo "NGINX_IMAGE=${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/nginx" >> $GITHUB_ENV
-
-      - name: Set tag environment variables
-        if: contains(env.GIT_BRANCH, 'refs/tags/')
-        run: |
-          git_tag=$(git describe --tags --abbrev=0)
-          echo "GIT_TAG=`echo ${git_tag}`" >> $GITHUB_ENV
-          echo "IMAGE_TAG=`echo ${git_tag:1}`" >> $GITHUB_ENV
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Pull docker/dockerfile for docker buildkit
         run: docker pull docker/dockerfile:1
 
-      - name: Create frontend/.env.prod for DEV
-        if: env.IMAGE_TAG == null
+      - name: Create frontend/.env.prod
         run: |
           echo "NODE_ENV = \"production\"" >> frontend/.env.prod
-          echo "VUE_APP_BASE_URL = \"${{ secrets.DEV_BASE_URL }}\"" >> frontend/.env.prod
+          if [[ ${{ env.GIT_BRANCH }} == refs/tags/* ]]; then
+            echo "VUE_APP_BASE_URL = \"${{ secrets.PROD_BASE_URL }}\"" >> frontend/.env.prod
+          else
+            echo "VUE_APP_BASE_URL = \"${{ secrets.DEV_BASE_URL }}\"" >> frontend/.env.prod
+          fi
           cat frontend/.env.prod
 
-      - name: Create frontend/.env.prod for PROD
-        if: env.IMAGE_TAG
-        run: |
-          echo "NODE_ENV = \"production\"" >> frontend/.env.prod
-          echo "VUE_APP_BASE_URL = \"${{ secrets.PROD_BASE_URL }}\"" >> frontend/.env.prod
-          cat frontend/.env.prod
+      - name: Build and export backend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend
+          tags: ${{ env.BACKEND_IMAGE }}
+          target: prod
+          outputs: type=docker,dest=/tmp/backend.tar
 
-      - name: Build docker images
-        run: |
-          DOCKER_BUILDKIT=1 docker build -t ${{ env.BACKEND_IMAGE }}:latest ./backend
-          DOCKER_BUILDKIT=1 docker build -t ${{ env.NGINX_IMAGE }}:latest ./frontend
+      - name: Build and export nginx
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend
+          tags: ${{ env.NGINX_IMAGE }}
+          target: prod
+          outputs: type=docker,dest=/tmp/nginx.tar
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
-      - name: Log into registry ${{ env.REGISTRY }}
+      - name: Upload images
         if: github.event_name == 'push'
+        uses: actions/upload-artifact@v2
+        with:
+          name: images
+          path: |
+            /tmp/backend.tar
+            /tmp/nginx.tar
+          retention-days: 1
+
+  deploy:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    needs: build-images
+
+    steps:
+      - name: Delete previous artifacts
+        uses: kolpav/purge-artifacts-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          expire-in: 0
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Download images
+        uses: actions/download-artifact@v2
+        with:
+          name: images
+          path: /tmp
+
+      - name: Load image
+        run: |
+          docker load --input /tmp/backend.tar
+          docker load --input /tmp/nginx.tar
+
+      # https://github.com/docker/login-action
+      - name: Log into registry 
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
-          registry: ${{ env.REGISTRY }}
+          # Use docker.io for Docker Hub if empty
+          registry: ${{ secrets.REGISTRY }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Publish latest images
-        if: github.event_name == 'push'
         run: |
           docker push ${{ env.BACKEND_IMAGE }}:latest
           docker push ${{ env.NGINX_IMAGE }}:latest
 
-      - name: Tag and publish release version
-        if: github.event_name == 'push' && env.IMAGE_TAG
+      - name: Set env.HOST
         run: |
-          docker image tag ${{ env.BACKEND_IMAGE }}:latest ${{ env.BACKEND_IMAGE }}:${{ env.IMAGE_TAG }}
-          docker image tag ${{ env.NGINX_IMAGE }}:latest   ${{ env.NGINX_IMAGE }}:${{ env.IMAGE_TAG }}
-          docker push ${{ env.BACKEND_IMAGE }}:${{ env.IMAGE_TAG }}
-          docker push ${{ env.NGINX_IMAGE }}:${{ env.IMAGE_TAG }}
-
-      - name: Set HOST to DEV host
-        if: github.event_name == 'push' && env.IMAGE_TAG == null
-        run: echo HOST=${{ secrets.DEV_HOST }} >> $GITHUB_ENV
-
-      - name: Set HOST to PROD host
-        if: github.event_name == 'push' && env.IMAGE_TAG
-        run: echo HOST=${{ secrets.PROD_HOST }} >> $GITHUB_ENV
+          if [[ ${{ env.GIT_BRANCH }} == refs/tags/* ]]; then
+            echo HOST=${{ secrets.PROD_HOST }} >> $GITHUB_ENV
+          else
+            echo HOST=${{ secrets.DEV_HOST }} >> $GITHUB_ENV
+          fi
 
       # https://github.com/appleboy/scp-action
-      - name: Copy file via ssh
-        if: github.event_name == 'push'
+      - name: Copy files via ssh
         uses: appleboy/scp-action@master
         with:
           host: ${{ env.HOST }}
@@ -111,11 +134,10 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "./docker-compose.yml, nginx"
-          target: "camfia"
+          target: ${{ env.ROOT_DIR }}
 
       #  https://github.com/appleboy/ssh-action
       - name: Execute remote ssh docker compose commands to run container
-        if: github.event_name == 'push'
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.HOST }}
@@ -123,16 +145,22 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd ~/camfia
+            cd ${{ env.ROOT_DIR }}
             touch registry-password
             echo ${{ secrets.REGISTRY_PASSWORD }} > registry-password
-            docker login ${{ env.REGISTRY }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin < registry-password
+            docker login ${{ secrets.REGISTRY }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin < registry-password
             rm registry-password
-            docker-compose down
             docker-compose pull
             docker-compose up -d
-            del_images=$(docker images --filter "dangling=true" -q --no-trunc)
-            if [ "$del_images" ];then
-              docker rmi $del_images
-            fi
-            docker logout ${{ env.REGISTRY }}
+            docker system prune -f
+            docker logout ${{ secrets.REGISTRY }}
+
+      - name: Tag and publish release version
+        if: contains(env.GIT_BRANCH, 'refs/tags/')
+        run: |
+          git_tag=$(git describe --tags --abbrev=0)
+          image_tag=${git_tag:1}
+          docker image tag ${{ env.BACKEND_IMAGE }}:latest ${{ env.BACKEND_IMAGE }}:$image_tag
+          docker image tag ${{ env.NGINX_IMAGE }}:latest   ${{ env.NGINX_IMAGE }}:$image_tag
+          docker push ${{ env.BACKEND_IMAGE }}:$image_tag
+          docker push ${{ env.NGINX_IMAGE }}:$image_tag
