--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,11 @@
-# build stage
-FROM node:lts-alpine as build-stage
+FROM node:lts-alpine as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build_prod
 
-# production stage
-FROM nginx:1.20.1-alpine as production-stage
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+FROM nginx:1.20.1-alpine as prod
+COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
-
-
-# test stage
-#FROM nginx:1.20.1-alpine as test-stage
-#COPY ./dist /usr/share/nginx/html
-#EXPOSE 80
-#CMD ["nginx", "-g", "daemon off;"]
