ci : container registry 주소를 .env 파일로 관리하도록 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - internal_network
 
   backend:
-    image: repo.treescale.com/camfia/backend
+    image: ${REGISTRY}/camfia/backend
     container_name: backend
     volumes:
       - ./log:/log
@@ -44,7 +44,7 @@ services:
       - internal_network
 
   nginx:
-    image: repo.treescale.com/camfia/nginx
+    image: ${REGISTRY}/camfia/nginx
     container_name: nginx
     restart: always
     ports:
